--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
+        
     </section>
 
+    <h2>Outra recomendação</h2>
+     
+    <a href="https://youtu.be/PnvAj2XyL-k?si=LVdn8RcPsIxq3Bys">
+       <img src="image.png" alt="">
+    </a>
+
+
 </body>
+<html>
